welcome.lessons.welcome.bat.bool1.PosNeg.scala.error
posNeg:8: error: illegal start of simple expression
	else if ((negative== true)&&(a<0&&b<0)))) {
                                               ^